fix: mdx
fix: mdx

fix: mdx props

under constructions

fix: under constructions

fix: overflow-y

fix: scrollbar

fix: scrollbar

--- a/src/components/common/console.module.css
+++ b/src/components/common/console.module.css
@@ -7,3 +7,9 @@
   border-radius: 4px;
   overflow: scroll;
 }
+
+.console::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
